<resources>
    <string name="app_name">Re7</string>
    <string name="title">S\'identifier</string>
    <string name="email">Entrer votre adresse e-mail</string>
    <string name="password">Entrer votre mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="signUp">Créer un compte</string>

    <!--create-->

    <string name="titleReg">Créer un compte</string>
    <string name="nameReg">Nom et prénom</string>
    <string name="emailReg">Adresse email</string>
    <string name="passwordReg">Mot de passe</string>
    <string name="register">Créer mon compte</string>
    <string name="sign_in">Déjà un compte ?</string>
    <string name="cancel">Retour</string>


    <!--main-->
    <string name="logout">Logout</string>
    <string name="title_of_category"> Titre</string>
    <string name="text_description_of_category">Description</string>
    <string name="name_list">Nom de la recette</string>
    <string name="desc_list">Description de la recette</string>
    <string name="nb_pers">Nombre de personne</string>
    <string name="time_cook">Temps de cuisson</string>

    <!-- footer-->
    <string name="favorite">Favoris</string>
    <string name="add">Ajouter</string>
    <string name="profile">Profile</string>
</resources>