<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <!-- Image à gauche -->
        <ImageView
            android:id="@+id/img_recette_list"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:scaleType="centerCrop"
            />

        <!-- Titre -->
        <TextView
            android:id="@+id/tv_name_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_recette_list"
            android:layout_marginBottom="4dp"
            android:text="@string/name_list"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Description -->
        <TextView
            android:id="@+id/tv_desc_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_name_list"
            android:layout_toEndOf="@id/img_recette_list"
            android:layout_marginBottom="4dp"
            android:text="@string/desc_list"
            android:textColor="#666"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_desc_list"
            android:layout_toEndOf="@id/img_recette_list"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <!-- Nombre de personnes -->
            <TextView
                android:id="@+id/tv_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nb_pers"
                android:textColor="#666"
                android:textSize="14sp"
                android:layout_marginEnd="8dp" />

            <!-- Temps de cuisson -->
            <TextView
                android:id="@+id/tv_time_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_cook"
                android:textColor="#666"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Bouton favoris -->
        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:contentDescription="Favoris"
            android:src="@drawable/favorite" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>
